# Tricorder

./: HISTORY.rst  LICENSE  README.md  pyproject.toml  setup.py
tricorder/bioinf/: __init__.py
tricorder/eval/segmentation/: EvaluateSegmentationWrapper.py
tricorder/math/transforms/: fourier.py  fourier_helpers.py
tricorder/mri/data/: dicom.py  nifti.py  sitk.py
tricorder/torch/: transforms.py
tricorder/torch/modules/: padding.py
